--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <div class="our__collektion--title">
         <h2 class="visually-hidden">our collektion</h2>
         <ul class="our__collektion--list">
-            <li class="our__collektion--item"><img src="./img-optimal/kopi1 copy.svg" alt="cofee Gran Espresso photo"> <h3>Gran Espresso</h3><p>Light and flavorful blend with cocoa and black pepper for an intense experience</p></li>
-            <li class="our__collektion--item"><img src="./img-optimal/kopi2.svg" alt="coffee Planalto photo"><h3>Planalto</h3><p>Brazilian dark roast with rich and velvety body, and hints of fruits and nuts</p></li>
-            <li class="our__collektion--item"><img src="./img-optimal/kopi3.svg" alt="coffee Piccollo photo"><h3>Piccollo</h3><p>Mild and smooth blend featuring notes of toasted almond and dried cherry</p></li>
-            <li class="our__collektion--item"><img src="./img-optimal/kopi4.svg" alt="coffee Danche photo"><h3>Danche</h3><p>Ethiopian hand-harvested blend densely packed with vibrant fruit notes</p></li>
+            <li class="our__collektion--item"><img src="./img-optimal/expresso@2x.png" width="256" height="193" srcset="./img-optimal/1-1x.png , ./img-optimal/expresso@2x.png" alt="cofee Gran Espresso photo"> <h3>Gran Espresso</h3><p>Light and flavorful blend with cocoa and black pepper for an intense experience</p></li>
+            <li class="our__collektion--item"><img src="./img-optimal/kopi2.png"  width="256" height="193" srcset="./img-optimal/3-1x.png" alt="coffee Planalto photo"><h3>Planalto</h3><p>Brazilian dark roast with rich and velvety body, and hints of fruits and nuts</p></li>
+            <li class="our__collektion--item"><img src="./img-optimal/kopi3.png"  width="256" height="193" srcset="./img-optimal/kopi3x1.png , ./img-optimal/kopi3.png" alt="coffee Piccollo photo"><h3>Piccollo</h3><p>Mild and smooth blend featuring notes of toasted almond and dried cherry</p></li>
+            <li class="our__collektion--item1"><img class="img" src="./img-optimal/kopi4.png"  width="256" height="177" srcset="./img-optimal/2-1x.png , ./img-optimal/kopi4.png"  alt="coffee Danche photo"><h3>Danche</h3><p>Ethiopian hand-harvested blend densely packed with vibrant fruit notes</p></li>
         </ul>
     </div>
     </div>
@@ -82,16 +82,16 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__list">
-            <img src="./img-optimal/Group 5.svg" alt="">
+            <img src="./img-optimal/Group 5.svg" alt="images">
             <ol class="footer__ol">
                 <li><a class="footer__title" href="#">HOME</a> </li>
                 <li><a class="footer__title" href="#"> ABOUT US</a></li>
                 <li><a class="footer__title" href="#"> Create your plan</a></li>
             </ol>
             <ul class="footer__2">
-                <li class="footer__logo"><a href="#" target="black"><img src="./img-optimal/Path.svg" alt="fecebook"></a></li>
-                <li class="footer__logo"><a href="#" target="black"><img src="./img-optimal/Path (1).svg" alt="twitter"></a></li>
-                <li class="footer__logo"><a href="#" target="black"><img src="./img-optimal/Shape1.svg" alt="instagram"></a></li>
+                <li class="footer__logo"><a href="#" target="black"><img src="./img/Path(1).svg" alt="fecebook"></a></li>
+                <li class="footer__logo"><a href="#" target="black"><img src="./img/Path(2).svg" alt="twitter"></a></li>
+                <li class="footer__logo"><a href="#" target="black"><img src="./img/Shape.svg" alt="instagram"></a></li>
             </ul>
             
         </div>
