--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <div class="our__collektion--title">
         <h2 class="visually-hidden">our collektion</h2>
         <ul class="our__collektion--list">
-            <li class="our__collektion--item"><img src="./img-optimal/expresso@2x.png" width="256" height="193" srcset="./img-optimal/1-1x.png , ./img-optimal/expresso@2x.png" alt="cofee Gran Espresso photo"> <h3>Gran Espresso</h3><p>Light and flavorful blend with cocoa and black pepper for an intense experience</p></li>
-            <li class="our__collektion--item"><img src="./img-optimal/kopi2.png"  width="256" height="193" srcset="./img-optimal/3-1x.png" alt="coffee Planalto photo"><h3>Planalto</h3><p>Brazilian dark roast with rich and velvety body, and hints of fruits and nuts</p></li>
-            <li class="our__collektion--item"><img src="./img-optimal/kopi3.png"  width="256" height="193" srcset="./img-optimal/kopi3x1.png , ./img-optimal/kopi3.png" alt="coffee Piccollo photo"><h3>Piccollo</h3><p>Mild and smooth blend featuring notes of toasted almond and dried cherry</p></li>
-            <li class="our__collektion--item1"><img class="img" src="./img-optimal/kopi4.png"  width="256" height="177" srcset="./img-optimal/2-1x.png , ./img-optimal/kopi4.png"  alt="coffee Danche photo"><h3>Danche</h3><p>Ethiopian hand-harvested blend densely packed with vibrant fruit notes</p></li>
+            <li class="our__collektion--item"><img src="./img-optimal/1-1x.png " width="256" height="193" srcset="./img-optimal/1-1x.png 1x, ./img-optimal/expresso@2x.png 2x" alt="cofee Gran Espresso photo"> <h3>Gran Espresso</h3><p>Light and flavorful blend with cocoa and black pepper for an intense experience</p></li>
+            <li class="our__collektion--item"><img src="./img-optimal/kopi2.png"  width="256" height="193" srcset="./img-optimal/3-1x.png 1x , ./img-optimal/kopi2.png 2x" alt="coffee Planalto photo"><h3>Planalto</h3><p>Brazilian dark roast with rich and velvety body, and hints of fruits and nuts</p></li>
+            <li class="our__collektion--item"><img src="./img-optimal/kopi3x1.png"  width="256" height="193" srcset="./img-optimal/kopi3x1.png 1x, ./img-optimal/kopi3.png 2x" alt="coffee Piccollo photo"><h3>Piccollo</h3><p>Mild and smooth blend featuring notes of toasted almond and dried cherry</p></li>
+            <li class="our__collektion--item1"><img class="img" src="./img-optimal/2-1x.png"  width="256" height="177" srcset="./img-optimal/2-1x.png 1x, ./img-optimal/kopi4.png 2x"  alt="coffee Danche photo"><h3>Danche</h3><p>Ethiopian hand-harvested blend densely packed with vibrant fruit notes</p></li>
         </ul>
     </div>
     </div>
